...
    }
    /// To add a new Row:  add title, viewControllerType, allRows
    enum Row: Int {
        case texture, dispatchQueue, promiseKit, uiTesting, uiTesting2, accessibility, navigation, filehandle, transitePresentStyle, customPresentAnimate, coreData
        var title:String {
            switch self {
            case .promiseKit: return "PromiseKit"
            case .uiTesting: return "UITesting"
            case .uiTesting2: return "UITesting2"
            case .accessibility: return "Accessibility"
            case .navigation: return "Navigation"
            case .filehandle: return "FileHandle"
            case .transitePresentStyle: return "TransitePresentStyle"
...
