...
                        <picker height="100" alignment="left" id="LaI-U8-0co"/>
                        <button width="1" alignment="left" title="Alert" id="GcT-VM-94W">
                            <connections>
                                <action selector="alertClicked" destination="Cfa-ri-kU2" id="JT4-nG-euq"/>
                            </connections>
                        </button>
                        <button width="55" alignment="left" title="Back" id="pK6-pd-huR">
                            <connections>
                                <action selector="backClicked" destination="Cfa-ri-kU2" id="poe-BK-LR5"/>
                            </connections>
                        </button>
                        <group width="136" height="41" alignment="left" id="tU6-CA-5rI">
                            <items>
...
