...
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmT-HT-mtI">
                    <rect key="frame" x="164.5" y="318.5" width="46" height="30"/>
                    <state key="normal" title="Button"/>
                    <connections>
                        <action selector="tapLocatinRequest:" destination="-1" eventType="touchUpInside" id="krc-bH-mK9"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EV3-RW-Svs">
                    <rect key="frame" x="16" y="617" width="55" height="30"/>
                    <state key="normal" title="Confirm"/>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="EV3-RW-Svs" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="0Mu-FR-hFA"/>
                <constraint firstAttribute="bottom" secondItem="EV3-RW-Svs" secondAttribute="bottom" constant="20" id="4dt-7D-mHA"/>
...
