//
//  TDUIAutomationUITests.swift
//  TDUIAutomationUITests
//
//  Created by Sida Wang on 3/18/17.
//  Copyright © 2017 Sida Wang. All rights reserved.
//

import XCTest

class TDUIAutomationUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["AVPlayerViewController"].tap()
        app.navigationBars["TopicDemos.PlayVideoView"].children(matching: .button).matching(identifier: "Back").element(boundBy: 0).tap()
        
        let tabBarsQuery = app.tabBars
        tabBarsQuery.children(matching: .button).matching(identifier: "Item").element(boundBy: 1).tap()
        tablesQuery.staticTexts["PromiseKit"].tap()
        tabBarsQuery.children(matching: .button).matching(identifier: "Item").element(boundBy: 0).tap()
        tablesQuery.staticTexts["Dynamic Text"].tap()
        app.navigationBars["TopicDemos.TextView"].children(matching: .button).matching(identifier: "Back").element(boundBy: 0).tap()
        
    }
    
}
